cluster-with-aad-auth/ingress-public.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: platform-ingress-public
  namespace: platform
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - www.contoso.com
    secretName: tls-secret
  rules:
  - host: www.contoso.com
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
