cluster-with-aad-auth/ingress-secure.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: platform-ingress-secure
  namespace: platform
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization, X-Auth-Request-Email
spec:
  tls:
  - hosts:
    - www.contoso.com
    secretName: tls-secret
  rules:
  - host: www.contoso.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /(.*)
